syntax = "proto3";


package himalaya;

import "himalaya_core.proto";

service HimalayaWorker {
  rpc Put (WorkerPutRequest) returns (WorkerPutResponse) {}
  rpc Get (WorkerGetRequest) returns (WorkerGetResponse) {}
  rpc Delete (WorkerDeleteRequest) returns (WorkerDeleteResponse) {}
}

message WorkerGetRequest { 
  bytes key = 1;
}

message WorkerGetResponse { 
  bytes value = 1;
}

message WorkerDeleteRequest {
  bytes key = 1;
}

message WorkerDeleteResponse {} 

message WorkerPutRequest {
  Entry entry = 1;
}

message WorkerPutResponse {}


